--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -5797,7 +5797,7 @@
                 <div class="ml-3">DVI10. Bo'sh vaqt (Do'stlar bilan uchrashish, sport bilan shug'ullanish, kinoga borish, aylanish, konsertlarga borish va h.k.)</div>
                 <select id="dvi10" name="dvi10" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="{{dvi10-1}">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
