--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -5797,7 +5797,7 @@
                 <div class="ml-3">DVI10. Free time (Meeting friends, playing sports, going to the movies, going out, going to concerts, etc.)</div>
                 <select id="dvi10" name="dvi10" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="{{dvi10-1}">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
