la toate variabilele dupa DVI10

--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -5797,7 +5797,7 @@
                 <div class="ml-3">DVI10. Free time (Meeting friends, playing sports, going to the movies, going out, going to concerts, etc.)</div>
                 <select id="dvi10" name="dvi10" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="{{dvi10-1}">1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5814,7 +5814,7 @@
                 <div class="ml-3">DVI11. Time management (Punctuality)</div>
                 <select id="dvi11" name="dvi11" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5831,7 +5831,7 @@
                 <div class="ml-3">DVI12. Behavior in public (At the store, at school, etc.)</div>
                 <select id="dvi12" name="dvi12" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5848,7 +5848,7 @@
                 <div class="ml-3">DVI13. Use of social networks (Development and use of a support system, community)</div>
                 <select id="dvi13" name="dvi13" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5865,7 +5865,7 @@
                 <div class="ml-3">DVI14. Developing and maintaining social relationships (Friends, family, neighbors, colleagues etc.)</div>
                 <select id="dvi14" name="dvi14" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5882,7 +5882,7 @@
                 <div class="ml-3">DVI15. Self-respect</div>
                 <select id="dvi15" name="dvi15" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5899,7 +5899,7 @@
                 <div class="ml-3">DVI16. Attitude towards school/learning</div>
                 <select id="dvi16" name="dvi16" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5916,7 +5916,7 @@
                 <div class="ml-3">DVI17. Knowledge of the benefits of a job</div>
                 <select id="dvi17" name="dvi17" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5933,7 +5933,7 @@
                 <div class="ml-3">DVI18. Finding a job (How and where)</div>
                 <select id="dvi18" name="dvi18" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5950,7 +5950,7 @@
                 <div class="ml-3">DVI19. Relationships at work</div>
                 <select id="dvi19" name="dvi19" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5968,7 +5968,7 @@
                 <div class="ml-3">DVI20. Keeping a job</div>
                 <select id="dvi20" name="dvi20" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- choose ---</option>
-                    <option value="1 >1. Not at all</option>
+                    <option value="1">1. Not at all</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
