--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -5797,7 +5797,7 @@
                 <div class="ml-3">DVI10. Свободное время (Встречи с друзьями, занятия спортом, поход в кино, прогулки, походы на концерты и т. д.)</div>
                 <select id="dvi10" name="dvi10" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="{{dvi10-1}">1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5814,7 +5814,7 @@
                 <div class="ml-3">DVI11. Тайм-менеджмент (пунктуальность)</div>
                 <select id="dvi11" name="dvi11" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5831,7 +5831,7 @@
                 <div class="ml-3">DVI12. Поведение в общественных местах (в магазине, в школе и т. д.)</div>
                 <select id="dvi12" name="dvi12" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5848,7 +5848,7 @@
                 <div class="ml-3">DVI13. Использование социальных сетей (Разработка и использование системы поддержки, сообщества)</div>
                 <select id="dvi13" name="dvi13" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5865,7 +5865,7 @@
                 <div class="ml-3">DVI14. Развитие и поддержание социальных отношений (Друзья, семья, соседи, коллеги и т. д.)</div>
                 <select id="dvi14" name="dvi14" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5882,7 +5882,7 @@
                 <div class="ml-3">DVI15. Самоуважение</div>
                 <select id="dvi15" name="dvi15" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5899,7 +5899,7 @@
                 <div class="ml-3">DVI16. Отношение к школе/обучению</div>
                 <select id="dvi16" name="dvi16" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5916,7 +5916,7 @@
                 <div class="ml-3">DVI17. Знание преимуществ работы</div>
                 <select id="dvi17" name="dvi17" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5933,7 +5933,7 @@
                 <div class="ml-3">DVI18. Как найти работу (Как и где)</div>
                 <select id="dvi18" name="dvi18" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5950,7 +5950,7 @@
                 <div class="ml-3">DVI19. Отношения на работе</div>
                 <select id="dvi19" name="dvi19" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5968,7 +5968,7 @@
                 <div class="ml-3">DVI20. Сохранение работы</div>
                 <select id="dvi20" name="dvi20" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- выбрать ---</option>
-                    <option value="1 >1. Совсем нет</option>
+                    <option value="1">1. Совсем нет</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
