--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -5797,7 +5797,7 @@
                 <div class="ml-3">DVI10. Bo'sh vaqt (Do'stlar bilan uchrashish, sport bilan shug'ullanish, kinoga borish, aylanish, konsertlarga borish va h.k.)</div>
                 <select id="dvi10" name="dvi10" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="{{dvi10-1}">1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5814,7 +5814,7 @@
                 <div class="ml-3">DVI11. Vaqtni boshqara olish (o'z vaqtida bajarish -punktuallik)</div>
                 <select id="dvi11" name="dvi11" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5831,7 +5831,7 @@
                 <div class="ml-3">DVI12. Jamoat joylarida o'zini tutish (Do'konda, maktabda va h.k.)</div>
                 <select id="dvi12" name="dvi12" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5848,7 +5848,7 @@
                 <div class="ml-3">DVI13. Ijtimoiy tarmoqlardan foydalanish (Yordam tizimini, hamjamiyatni shakllantirish va undan foydalanish)</div>
                 <select id="dvi13" name="dvi13" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5865,7 +5865,7 @@
                 <div class="ml-3">DVI14. Ijtimoiy munosabatlarni rivojlantirish va ularni qo'llab-quvvatlash (Do'stlar, oila, qo'shnilar, hamkasblar va h.z.)</div>
                 <select id="dvi14" name="dvi14" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5882,7 +5882,7 @@
                 <div class="ml-3">DVI15. O'ziga nisbatan hurmat hissi</div>
                 <select id="dvi15" name="dvi15" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5899,7 +5899,7 @@
                 <div class="ml-3">DVI16. Maktabga / o'qishga munosabat</div>
                 <select id="dvi16" name="dvi16" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5916,7 +5916,7 @@
                 <div class="ml-3">DVI17. Mehnat faoliyatining afzalliklarini bilish</div>
                 <select id="dvi17" name="dvi17" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5933,7 +5933,7 @@
                 <div class="ml-3">DVI18. Ish topish (qanday va qayerda)</div>
                 <select id="dvi18" name="dvi18" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5950,7 +5950,7 @@
                 <div class="ml-3">DVI19. Ishdagi munosabatlar</div>
                 <select id="dvi19" name="dvi19" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
@@ -5968,7 +5968,7 @@
                 <div class="ml-3">DVI20. Ishni saqlab qolish</div>
                 <select id="dvi20" name="dvi20" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                     <option value="-9">--- tanlang ---</option>
-                    <option value="1 >1. Umuman yo'q</option>
+                    <option value="1">1. Umuman yo'q</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
