fix issues I2, I4 si I5

--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -1659,7 +1659,7 @@
                         </div>
                     </div>
                     <div class="mb-4">
-                        <div class="mb-2">b Употребляет ли наркотики?</div>
+                        <div class="mb-2">b. Употребляет ли наркотики?</div>
                         <div class="flex gap-4">
                             <div class="flex items-center">
                                 <input type="radio" id="ct9b-1" name="ct9b" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -3178,7 +3178,7 @@
                         <input type="radio" id="qhealth9a-3" name="qhealth9a" value="3" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9a-3" class="ms-2 text-sm text-gray-900">3. Наблюдаются расстройства</label>
                     </div>
-                    <p>б. Эмоциональный</p>
+                    <p>b. Эмоциональный</p>
                     <div class="flex items-center">
                         <input type="radio" id="qhealth9b-1" name="qhealth9b" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9b-1" class="ms-2 text-sm text-gray-900">1. Нормально развит для своего возраста</label>
@@ -3191,7 +3191,7 @@
                         <input type="radio" id="qhealth9b-3" name="qhealth9b" value="3" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9b-3" class="ms-2 text-sm text-gray-900">3. Наблюдаются расстройства</label>
                     </div>
-                    <p>в. Когнитивный</p>
+                    <p>c. Когнитивный</p>
                     <div class="flex items-center">
                         <input type="radio" id="qhealth9c-1" name="qhealth9c" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9c-1" class="ms-2 text-sm text-gray-900">1. Нормально развит для своего возраста</label>
@@ -3204,7 +3204,7 @@
                         <input type="radio" id="qhealth9c-3" name="qhealth9c" value="3" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9c-3" class="ms-2 text-sm text-gray-900">3. Наблюдаются расстройства</label>
                     </div>
-                    <p>д. Поведенческий</p>
+                    <p>d. Поведенческий</p>
                     <div class="flex items-center">
                         <input type="radio" id="qhealth9d-1" name="qhealth9d" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9d-1" class="ms-2 text-sm text-gray-900">1. Нормально развит для своего возраста</label>
@@ -3230,7 +3230,7 @@
                         <input type="radio" id="qhealth9e-3" name="qhealth9e" value="3" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9e-3" class="ms-2 text-sm text-gray-900">3. Наблюдаются расстройства</label>
                     </div>
-                    <p>ф. Личностный</p>
+                    <p>f. Личностный</p>
                     <div class="flex items-center">
                         <input type="radio" id="qhealth9f-1" name="qhealth9f" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9f-1" class="ms-2 text-sm text-gray-900">1. Нормально развит для своего возраста</label>
@@ -3243,7 +3243,7 @@
                         <input type="radio" id="qhealth9f-3" name="qhealth9f" value="3" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9f-3" class="ms-2 text-sm text-gray-900">3. Наблюдаются расстройства</label>
                     </div>
-                    <p>г. Межличностные отношения</p>
+                    <p>g. Межличностные отношения</p>
                     <div class="flex items-center">
                         <input type="radio" id="qhealth9g-1" name="qhealth9g" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="qhealth9g-1" class="ms-2 text-sm text-gray-900">1. Нормально развит для своего возраста</label>
