--- a/src/pages/instruments/02_cibs_en.html
+++ b/src/pages/instruments/02_cibs_en.html
@@ -677,7 +677,7 @@
                     </div>
                     <div class="flex items-center">
                         <input id="cm1dw-6" type="radio" value="6" name="cm1dw" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="cm1dw-6" class="ms-2 text-sm text-gray-900">6. The parent refused to take hisher child from the maternity home or medical institution.</label>
+                        <label for="cm1dw-6" class="ms-2 text-sm text-gray-900">6. The parent refused to take his/her child from the maternity home or medical institution.</label>
                     </div>
                     <div class="flex items-center">
                         <input id="cm1dw-7" type="radio" value="7" name="cm1dw" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
