--- a/src/pages/instruments/02_cibs_uz.html
+++ b/src/pages/instruments/02_cibs_uz.html
@@ -3197,7 +3197,7 @@
             </div>
 
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. ТЕКУЩЕЕ ПОЛОЖЕНИЕ РЕБЕНКА</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">5. BOLANING JORIY HOLATI</h2>
             <h3 class="text-xl font-semibold bg-gray-100 px-2 py-1 text-gray-700">5.1. TA'LIM</h3>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -4205,7 +4205,7 @@
             <input type="hidden" id="lk22_2_7" name="lk22_2_7" />
 
             <div class="grid grid-cols-2 gap-4 items-start mt-10">
-                <div>LK22-2m. Nogironlik to'g'risidagi ma'lumotnomaga ko'ra, bolada ruhiy zaiflikning qaysi darajasi mavjud?</div>
+                <div>LK22_2m. Nogironlik to'g'risidagi ma'lumotnomaga ko'ra, bolada ruhiy zaiflikning qaysi darajasi mavjud?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="lk22_2m-1" type="radio" value="1" name="lk22_2m" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
