--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -24,7 +24,7 @@
             <div class="grid grid-cols-12 border">
                 <div class="col-span-1 bg-stone-200 p-2"></div>
                 <div class="col-span-11 p-2">
-                    <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4">Questionnaire about the young person leaving the child care system</h1>
+                    <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4">Questionnaire about the young person who left the alternative child care system</h1>
                 </div>
             </div>
 
