--- a/src/pages/instruments/04_qmr_en.html
+++ b/src/pages/instruments/04_qmr_en.html
@@ -1899,6 +1899,7 @@
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">
                     CC7. Please indicate the daily average number of calories in the food served by the institution last week, for each of the following age group?
+                    <small class="my-2 block italic text-red-500">FILL IN 0 (ZERO) IF THERE ARE NO CHILDREN FROM A CERTAIN AGE GROUP IN THE INSTITUTION</small>
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex flex-col gap-4">
