--- a/src/pages/instruments/04_qmr_ru.html
+++ b/src/pages/instruments/04_qmr_ru.html
@@ -952,7 +952,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div class="col-span-1">AF8. В жилом помещенииб водоснабжение следующее...</div>
+                <div class="col-span-1">AF8. В жилом помещении водоснабжение следующее...</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="af8-1" type="radio" value="1" name="af8" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -1899,6 +1899,7 @@
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">
                     СС7. Пожалуйста, укажите среднесуточное количество калорий в пище, подаваемой учреждением на прошлой неделе, для каждой из следующих возрастных групп?
+                    <small class="my-2 block italic text-red-500">Поставьте 0 (ноль),если в учреждении нет детей определенной возрастной группы</small>
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex flex-col gap-4">
