--- a/src/pages/instruments/04_qmr_uz.html
+++ b/src/pages/instruments/04_qmr_uz.html
@@ -1899,6 +1899,7 @@
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">
                     CC7. Iltimos, quyidagi yosh guruhlari uchun o'tgan haftada muassasa tomonidan taqdim etilgan ovqatning kunlik o'rtacha kaloriya miqdorini ko'rsating?
+                    <small class="my-2 block italic text-red-500">AGAR MUASSASADA MA'LUM BIR YOSH GURUHIGA OID BOLALAR BO'LMASA, 0 (NOL) KIRITING</small>
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex flex-col gap-4">
