--- a/src/pages/instruments/05_yplcs_ru.html
+++ b/src/pages/instruments/05_yplcs_ru.html
@@ -24,7 +24,7 @@
             <div class="grid grid-cols-12 border">
                 <div class="col-span-1 bg-stone-200 p-2"></div>
                 <div class="col-span-11 p-2">
-                    <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4">Анкета о молодом человеке, выходящем из системы опеки  детей</h1>
+                    <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4">Анкета о молодом человеке вышедшим из системы опеки</h1>
                 </div>
             </div>
 
