--- a/src/pages/instruments/05_yplcs_uz.html
+++ b/src/pages/instruments/05_yplcs_uz.html
@@ -24,7 +24,7 @@
             <div class="grid grid-cols-12 border">
                 <div class="col-span-1 bg-stone-200 p-2"></div>
                 <div class="col-span-11 p-2">
-                    <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4">Bolalarga vasiylik qilish tizimidan chiqib ketayotgan yosh odam haqida soʻrovnoma</h1>
+                    <h1 class="text-4xl text-gray-700 pl-4 tracking-wide mb-4">Vasiylik tizimidan chiqib ketgan yosh shaxs haqida so'rovnoma</h1>
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
 
             <input type="hidden" id="data" name="data" />
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. USHBU YOSH ODAM HAQIDA MAʼLUMOTNI TOʻLDIRGAN MUTAXASSIS</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">1. USHBU YOSH SHAXS HAQIDA MAʼLUMOTNI TOʻLDIRGAN MUTAXASSIS</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-4">
                 <div>OMR1. Ismi</div>
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. YOSH ODAM HAQIDA SHAXSIY MAʼLUMOTLAR</h2>
+            <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">2. YOSH SHAXS HAQIDA MAʼLUMOTLAR</h2>
 
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
@@ -197,7 +197,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>PI5. Yosh odamning etnik kelib chiqishi (millati)</div>
+                <div>PI5. Yosh shaxsning etnik kelib chiqishi (millati)</div>
                 <div>
                     <select id="pi5" name="pi5" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
@@ -215,7 +215,7 @@
                 </div>
             </div>
 
-            <p class="mt-6"><br>Tegishli reyestrga koʻra, bolalarga vasiylik turining tizimidan chiqishdan oldin yosh odam yashagan oxirgi muassasining</b></p>
+            <p class="mt-6"><br>Tegishli reyestrga koʻra, bolalarga vasiylik turining tizimidan chiqishdan oldin yosh shaxs yashagan oxirgi muassasi</b></p>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>PI6r. Viloyat</div>
@@ -277,7 +277,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div>PI7. Yosh odam vasiylik tizimini tark etgan sana (kun / oy / yil)</div>
+                <div>PI7. Yosh shaxs vasiylik tizimini tark etgan sana (kun / oy / yil)</div>
                 <div>
                     <input type="text" id="pi7" name="pi7" class="border-gray-400 bg-white border text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 disabled:bg-gray-100 read-only:bg-gray-100 p-2.5 block w-full" />
                 </div>
@@ -370,7 +370,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div class="col-span-1">PI10. Yosh odamning farzandlari bormi?</div>
+                <div class="col-span-1">PI10. Yosh shaxsning farzandlari bormi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="pi10-1" type="radio" value="1" name="pi10" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -398,7 +398,7 @@
             <h2 class="text-2xl font-bold text-gray-700 mb-4 mt-10">3. UY-JOY</h2>
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
-                <div class="col-span-1">PR1. Yosh odamning ota-onasi yoki boshqa shaxslarning mulkiga qonuniy huquqi bormi?</div>
+                <div class="col-span-1">PR1. Yosh shaxsning ota-onasi yoki boshqa shaxslarning mulkiga qonuniy huquqi bormi?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="pr1-1" type="radio" value="1" name="pr1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
