--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -1228,12 +1228,12 @@
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div>CT3a. Место рождения</div>
                 <div class="flex items-center">
-                    <input type="checkbox" id="ct3a_out" name="ct3a_out" value="{{ct3a_out-1}}" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                    <label for="ct3a_out" class="ms-2 text-sm text-gray-900">8.Отец рожден в другой стране</label>
+                    <input type="checkbox" id="ct3a_out" name="ct3a_out" value="1" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
+                    <label for="ct3a_out" class="ms-2 text-sm text-gray-900">8. Отец рожден в другой стране</label>
                 </div>
                 <div></div>
                 <div class="flex items-center">
-                    <input type="checkbox" id="ct3a_dk" name="ct3a_dk" value="{{ct3a_dk-1}}" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
+                    <input type="checkbox" id="ct3a_dk" name="ct3a_dk" value="9" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-100 rounded">
                     <label for="ct3a_dk" class="ms-2 text-sm text-gray-900">9. Неизвестно</label>
                 </div>
             </div>
