--- a/src/pages/instruments/04_qmr_en.html
+++ b/src/pages/instruments/04_qmr_en.html
@@ -826,11 +826,11 @@
                 <thead>
                     <tr>
                         <th></th>
-                        <th>1. Very bad</th>
-                        <th>2. Bad</th>
-                        <th>3. Neither nor</th>
-                        <th>4. Good</th>
-                        <th>5. Very good</th>
+                        <th>Very bad</th>
+                        <th>Bad</th>
+                        <th>Neither nor</th>
+                        <th>Good</th>
+                        <th>Very good</th>
                     </tr>
                 </thead>
                 <tbody>
