--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -201,16 +201,16 @@
                 <div>
                     <select id="pi5" name="pi5" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- choose ---</option>
-                        <option value="{{lk12-1}}">1. Uzbek</option>
-                        <option value="{{lk12-2}}">2. Russian</option>
-                        <option value="{{lk12-3}}">3. Kazakh</option>
-                        <option value="{{lk12-4}}">4. Tajik</option>
-                        <option value="{{lk12-5}}">5. Tatar</option>
-                        <option value="{{lk12-6}}">6. Karakalpaks</option>
-                        <option value="{{lk12-7}}">7. Kyrgyz</option>
-                        <option value="{{lk12-8}}">8. Korean</option>
-                        <option value="{{lk12-9}}">9. Other</option>
-                        <option value="{{lk12-10}}">0. Not declared/unknown</option>
+                        <option value="1">1. Uzbek</option>
+                        <option value="2">2. Russian</option>
+                        <option value="3">3. Kazakh</option>
+                        <option value="4">4. Tajik</option>
+                        <option value="5">5. Tatar</option>
+                        <option value="6">6. Karakalpaks</option>
+                        <option value="7">7. Kyrgyz</option>
+                        <option value="8">8. Korean</option>
+                        <option value="9">9. Other</option>
+                        <option value="0">0. Not declared/unknown</option>
                     </select>
                 </div>
             </div>
