--- a/src/pages/instruments/05_yplcs_ru.html
+++ b/src/pages/instruments/05_yplcs_ru.html
@@ -201,16 +201,16 @@
                 <div>
                     <select id="pi5" name="pi5" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- выбрать ---</option>
-                        <option value="{{lk12-1}}">1. Узбек/чка</option>
-                        <option value="{{lk12-2}}">2. Русский/ая</option>
-                        <option value="{{lk12-3}}">3. Казах/шка</option>
-                        <option value="{{lk12-4}}">4. Таджик/чка</option>
-                        <option value="{{lk12-5}}">5. Татарин/ка</option>
-                        <option value="{{lk12-6}}">6. Каракалпак/чка</option>
-                        <option value="{{lk12-7}}">7. Кыргыз/ка</option>
-                        <option value="{{lk12-8}}">8. Кореец/еянка</option>
-                        <option value="{{lk12-9}}">9. Другое</option>
-                        <option value="{{lk12-10}}">0. Не заявлено/неизвестно</option>
+                        <option value="1">1. Узбек/чка</option>
+                        <option value="2">2. Русский/ая</option>
+                        <option value="3">3. Казах/шка</option>
+                        <option value="4">4. Таджик/чка</option>
+                        <option value="5">5. Татарин/ка</option>
+                        <option value="6">6. Каракалпак/чка</option>
+                        <option value="7">7. Кыргыз/ка</option>
+                        <option value="8">8. Кореец/еянка</option>
+                        <option value="9">9. Другое</option>
+                        <option value="0">0. Не заявлено/неизвестно</option>
                     </select>
                 </div>
             </div>
