--- a/src/pages/instruments/05_yplcs_uz.html
+++ b/src/pages/instruments/05_yplcs_uz.html
@@ -201,16 +201,16 @@
                 <div>
                     <select id="pi5" name="pi5" class="border-gray-400 border text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
                         <option value="-9">--- tanlang ---</option>
-                        <option value="{{lk12-1}}">1. Oʻzbek</option>
-                        <option value="{{lk12-2}}">2. Rus</option>
-                        <option value="{{lk12-3}}">3. Qozoq</option>
-                        <option value="{{lk12-4}}">4. Tojik</option>
-                        <option value="{{lk12-5}}">5. Tatar</option>
-                        <option value="{{lk12-6}}">6. Qoraqalpoq</option>
-                        <option value="{{lk12-7}}">7. Qirgʻiz</option>
-                        <option value="{{lk12-8}}">8. Koreys</option>
-                        <option value="{{lk12-9}}">9. Boshqa</option>
-                        <option value="{{lk12-10}}">0. Oshkor qilinmagan / nomaʼlum</option>
+                        <option value="1">1. Oʻzbek</option>
+                        <option value="2">2. Rus</option>
+                        <option value="3">3. Qozoq</option>
+                        <option value="4">4. Tojik</option>
+                        <option value="5">5. Tatar</option>
+                        <option value="6">6. Qoraqalpoq</option>
+                        <option value="7">7. Qirgʻiz</option>
+                        <option value="8">8. Koreys</option>
+                        <option value="9">9. Boshqa</option>
+                        <option value="0">0. Oshkor qilinmagan / nomaʼlum</option>
                     </select>
                 </div>
             </div>
